# multi-obj-tracking

./: DEVELOPING.md  Makefile  README.md  pyproject.toml  sample_code.py
code-quality/: format.sh  lint.sh
scripts/: bytetrack_hyper_search.py  hyperparameter_search.py  label_studio_reformat.py
src/tracking/: __init__.py  bbox_utils.py  bytetrack.py  deepsort.py  evaluation_utils.py  sort.py  track.py  tracker_base.py  tracker_interface.py  type_definitions.py
test/assets/person_example/: README.md  collect_gl_inferences.py  detections.jsonl  full_occlusion.txt  make_detections_jsonl.py  make_gt_video.py  ml_inferences.jsonl
test/assets/volleyball_example/: README.md  annotations.xml  collect_gl_inferences.py  convert_annotations.py  create_gt_video.py  detections.jsonl  ml_inferences.jsonl
test/unit/: bbox_utils_test.py  bytetrack_tracker_test.py  common_tracker_utils_test.py  deepsort_tracker_test.py  mock_provider.py  mock_provider_test.py  sort_tracker_test.py  track_test.py  tracker_base_test.py
